# nark

./: .gitignore  Cargo.toml  README.md
.github/workflows/: bench-pr.yml  release.yml
bench/: Cargo.toml
bench/datasets/ir/: README.md
bench/datasets/ir/nark-self/: README.md
bench/datasets/ir/synthetic-tiny/: README.md  queries.jsonl
bench/datasets/ir/synthetic-tiny/corpus/: n01.md  n02.md  n03.md  n04.md  n05.md  n06.md  n07.md  n08.md  n09.md  n10.md  n11.md  n12.md
bench/datasets/locomo/: README.md  fetch.sh
bench/datasets/longmemeval/: README.md  fetch.sh
bench/llm/: README.md
bench/llm/prompts/: locomo-generate.md  locomo-judge.md  longmemeval-judge.md
bench/results/local/: longmemeval-fts5-longmemeval-smoke-5.json  longmemeval-nark-longmemeval-smoke-5.json
bench/results/main/: ir-fts5-default.json  ir-fts5-synthetic-tiny-default.json  ir-nark-default.json  ir-nark-synthetic-tiny-default.json  ir-vector-default.json  ir-vector-synthetic-tiny-default.json
bench/scripts/: regression-check.sh
bench/src/: main.rs  model_cache.rs  protocol.rs  result.rs
bench/src/adapters/: fts5.rs  mod.rs  nark.rs  vector.rs
bench/src/llm/: api.rs  cache.rs  claude_cli.rs  echo.rs  eval.rs  mod.rs  prompt.rs
bench/src/metrics/: ir.rs
bench/src/tasks/: ir.rs  locomo.rs  locomo_loader.rs  longmemeval.rs  longmemeval_loader.rs  mod.rs
bench/tests/: smoke.rs
docs/superpowers/plans/: 2026-04-01-search-snippets.md  2026-05-13-nark-bench-phase-1a.md  2026-05-17-nark-bench-phase-1b.md  2026-05-17-nark-bench-phase-1c.md  2026-05-17-nark-bench-phase-2.md
docs/superpowers/specs/: 2026-04-01-search-snippets-design.md  2026-05-13-nark-benchmarking-design.md  2026-05-16-phase-1b-design.md  2026-05-17-phase-1c-design.md  2026-05-17-phase-2-design.md
migrations/01-create-core-tables/: up.sql
migrations/02-note-edges-v2/: up.sql
scripts/: release.sh
src/: config.rs  lib.rs  main.rs
src/cli/: about.rs  append.rs  diff.rs  edit.rs  embed.rs  history.rs  init.rs  jot.rs  link.rs  links.rs  ls.rs  mod.rs  orient.rs  peek.rs  read.rs  related.rs  retract.rs  rollback.rs  search.rs  stats.rs  tag.rs  update.rs  util.rs  write.rs
src/db/: mod.rs
src/embed/: api.rs  download.rs  mod.rs
src/registry/: browse.rs  bulk.rs  delete.rs  edges.rs  mod.rs  resolve.rs  search.rs  similarity.rs  stats.rs  tags.rs  write.rs
src/types/: markdown.rs  mod.rs  note.rs
src/vault/: fs.rs
