[package]
name = "ironvault"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
blake3 = "1.8.3"
chrono = "0.4.43"
rusqlite = { version = "0.38.0", features = ["bundled"] }
rusqlite_migration = { version = "2.4.1", features = ["from-directory"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = "1.49.0"
uuid = { version = "1.21.0", features = ["v4"] }
