[package]
name = "nark-bench"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "nark-bench"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
nark = { path = ".." }
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
