[package]
name = "nark-bench"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "nark-bench"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
nark = { path = ".." }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
assert_cmd = "2"
